tests/fixtures/positive/licensing/lgpl-static-linking-in-apk/settings.gradle.kts
rootProject.name = "lgpl-static-linking-in-apk-positive"

include(":app")
