tests/fixtures/negative/licensing/lgpl-static-linking-in-apk/settings.gradle.kts
rootProject.name = "lgpl-static-linking-in-apk-negative"

include(":app", ":feature:maps")
